--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
+@import "antd/dist/antd.css";
+
 .App {
-  text-align: center;
+   min-height: 90vh;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.form_container {
+   padding: 0 1.5rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App h1 {
+   text-align: center;
+   color: #fca311;
+   font-weight: 600;
+   font-size: 25px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.data_text {
+   text-align: center;
+   max-width: 550px;
+   font-weight: 600;
+   font-size: 18px;
+   padding: 1.5rem;
+   color: #fca311;
+   margin-bottom: 1rem;
+   border: 2px solid #2a93fcff;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
